added QnA for SDLC

--- a/src/content/posts/8.md
+++ b/src/content/posts/8.md
@@ -175,3 +175,115 @@ Scenario 2: Viewing products in the cart Given: The cart contains products When:
   - What didn’t go well.
   - Areas for improvement.
 - Decide actionable steps for what to **start**, **stop**, and **continue**.
+
+
+# Quiz
+## SDLC
+
+1. what is SDLC ?
+    1. The Software Development Life Cycle is a well defined procedure for producing high-quality, low-cost software in the shortest amount of time. The SDLC describes a detailed flow of phases, each with it’s own process and deliverables. 
+2. What are the importance of SDLC?
+    1. for effective project management and tracking
+    2. increases visibility
+    3. control over development process
+3. Explain the phases in typical SDLC process
+    1. Requirement gathering and analysis
+    2. Design
+    3. Development
+    4. Testing
+    5. Deployment and Maintenance
+4. Explain difference types of SDLC models
+    1. Waterfall model - It is sequential approach to software development where one phase’s output becomes input for the next
+    2. Agile model - Iterative incremental approach to software development.
+    3. Iterative Model - It is used when initial requirement to software development is well defined, but the scope of the project and features is unclear
+    4. Spiral Model - It is a risk management strategy that combines iterative development with waterfall model.
+    5. V-Model - In V-Model every phase of the development cycle has a testing phase that is directly linked to it.
+5. What is SRS ?
+    1. Software Requirement Specification is a document that explains what the software will accomplish and how it will work. This report is created after all requirements have been collected and analyzed. It serves as a foundation for software engineering tasks.
+6. What is feasibility study ?
+    1. Feasibility study determines project’s legal, techincal and commercial feasibility.
+7. What are the levels of testing ?
+    1. Unit testing
+    2. integration testing
+    3. system testing
+    4. acceptance testing
+
+## Agile Methodology
+
+1. What are the different types of Agile Methodology ?
+    1. Scrum - it depends on feedback, self-management, small teams and sprints
+    2. FDD - Feature Driven Development - It is a lightweight iterative and incremental software development process whose main purpose is to deliver stable and working software on time. 
+    3. Lean software Development - respect for people and continuous improvement
+    4. XP - software is tested right from day one, collecting feedback so as to improve the development process
+    5. kanban - kanban projects are generally managed through a board. This board helps team members to keep an eye on workflow for measuring it’s progress. 
+2. What are the advantages of Agile process 
+    1. adapts well with changing requirements
+    2. fast and continuous development
+    3. enables collaboration between client and project team
+    4. faster feedback from customers
+    5. quick delivery of projects
+    6. more flexibility
+    
+    3. What are the disadvantages of Agile ?
+    
+    1. Not good for small development projects
+    2. lack of formal documentation and design
+    3. difficult to estimate resource requirements 
+    4. costly compared to other development methodologies
+    5. difficulty in testing and test construction
+    1. Explain Agile testing? what are the principles of Agile Testing?
+        1. Agile testing is a software testing methodology that follows agile best practices
+        2. principles of agile testing
+            1. continuous testing 
+            2. continuous feedback - agile encourages taking feedback from clients to make sure that the product meets client’s requirements.
+            3. teamwork - not only testers but developers, business analyst also perform testing
+            4. clean code - all error should be fixed quickly within the same iteration by agile team
+            5. Less documentation - agile encourages reusability
+            6. Test-Driven - In agile testing is done during implementation so error can be removed on time
+            7. customer satisfaction - During agile testing process development progress is shown to clients so that they can adapt and update their requirements. 
+    2. What qualities should a agile tester have ?
+        1. excellent communication skills
+        2. critical and creative thinking
+        3. positive and solution oriented attitude
+        4. Basic knowledge of agile process and principles
+        5. understanding of Customer requirements
+        6. cope up with change.
+    3. What do you mean by refactoring ?
+        1. Refactoring is changing the internal structure of software without changing the external behavior. It is normally done to maintain the code. Red-Green refactor is a popular refactoring technique.
+    4. What is the difference between sprint backlog and product backlog?
+        1. sprint backlog - is the list of task the project development team plans to complete in a sprint. It is developed by and for the developers
+        2. Product backlog - It is the list of task that must be done to complete the whole project. It is generally owned and maintained by project owner.
+    5. What is spike and zero sprint in Agile ?
+        1. spike - Spike generally refers to a larger and complex user story that cannot be estimated until the development team runs a timebox investigation. 
+        2. Zero sprint - it is the preparation step that comes before first sprint. It includes activities like setting up development environment, preparing backlog etc
+    6. what is story points in agile ?
+        1. story points is a way to measure effort required to completed a task.
+    7. what is the structure division in agile?
+        1. Epic → stories → tasks
+    8. What do you mean by the term “Velocity” in Agile?
+        1. velocity is a unit that measures, how much work an agile development team can successfully complete in one sprint.
+    9. What do you mean by Daily Stand UP meeting ?
+        1. Daily Stand up meeting is a day-to-day meeting, where all team members discuss their progress, what was done yesterday, what is the plan for day and discuss any blockers. It brings everyone up to date on the information.
+    10. What is incremental and iterative development ?
+        1. Incremental - break up a project into chunks and complete the chunks individually. (monalisa in blocks)
+        2. iterative - Build up features gradually (monalisa - outline, colors) in development cycles until the product is obtained. 
+    11. what is Agile Manifesto ? what are its values and principles ?
+        1. Agile manifesto is a document that contains values and principles of Agile.
+        2. 4 Agile values 
+            1. individual and interactions over processes and Tools
+            2. working software over comprehensive documentation
+            3. customer collaboration over contract negotiationw
+            4. responding to change over following plan
+        3. 12 principles of Agile
+            1. customer satisfaction
+            2. welcome changes
+            3. frequent delivery
+            4. work together
+            5. motivated team
+            6. face-to-face communication
+            7. working software
+            8. constant pace
+            9. Good design
+            10. simplicity
+            11. self - organization
+            12. reflect and adjust
