--- a/src/content/posts/10.md
+++ b/src/content/posts/10.md
@@ -9,5 +9,5 @@ image:
 tags: ["Software Testing", "QA", "SDET"]
 ---
 
-### Sandbox testing
+# Sandbox testing
 Sandbox testing is testing a system or API in an isolated enviroment without affects the real world users. Normally used to test payment gateways, third-party integrations.
