--- a/src/content/posts/11.md
+++ b/src/content/posts/11.md
@@ -1,7 +1,7 @@
 ---
 pubDate: 2025-03-08
 author: Samridha
-title: Tseting QnA
+title: Testing QnA
 description: "Explore the fundamentals of software testing, including types, techniques, planning, and defect lifecycle, designed for beginners and professionals alike."
 image:
   url: "https://images.unsplash.com/photo-1618580747643-7ecc7240ba4e?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -9,119 +9,136 @@ image:
 tags: ["Software Testing", "QA", "SDET"]
 ---
 
-1. What is software Testing ?
-    1. Software Testing involves evaluating and verifying a software product’s functionality. It checks whether the software product matches requirements and it’s defect free.
-2. What are the different types of software testing ?
-    1. Functional Testing - Unit testing, integration testing, system testing, interface testing, regression testing, user acceptance testing. 
-    2. Non functional testing - Performance testing(Load testing, stress testing, endurance testing, spike testing), reliability testing, security testing, documentation testing, installation testing, smoke testing.
-- Types of testing
-    
-    Unit testing - programmatic testing the internal working of a unit of code, such a function of method. It is normally done by developer during development.
-    
-    Integration testing - Ensures multiple components of system work together as expected and produce required results
-    
-    Regression testing - Ensures existing features are not broken due to new code changes.
-    
-    system testing - end-to-end testing done on a completed software to ensure whole system works as expected.
-    
-    smoke testing - quick test performed to ensure basic level functionalities works as expected when deployed. normally spent around 10-15 minutes.
-    
-    performance testing - ensures software perform according to user’s expectation by checking the response time, throughput, under specific load and environment.
-    
-    User Acceptance testing - This is the last step before software is live. ensures the software meets the requirements of the client.
-    
-    Stress testing - in stress testing, tester subjects the software under heavy load such as high number of requests or stringent memory conditions to verify if it works well.
-    
-1. What are the principles of testing ?
-    1. Absence of errors fallacy - software must be bug free and also meet all the customer requirements
-    2. Testing shows the presence of error - testing cannot Guarantee that software is defect-free. Testing can minimize the number of defects, but can’t remove them all.
-    3. Exhaustive testing is not possible - all possible test cases cannot be covered. It will cost more and its impractical. you test select few testcases and assume other cases will produce right results
-    4. Defect clustering - The majority of defects are typically found in small number of modules. 80% of defects arise from 20% of modules.
-    5. Pesticide paradox - it is impossible to find new bugs by re-running the same test cases. This updating new test cases is necessary in order to find new bugs.
-    6. Early tesing - in early stages of SDLC, defects will be detected more easily and at lowe cost. 
-    7. Testing is context-dependent - testing approach varies depending on the software development context.
-2. What is API testing ?
-    1. API stands for Application Programming Interface. It is a means for components to communicate. It Abstracts the internal workings and complexity and allows users to focus on input and required output.
-3. How does a test coverage tool work ?
-    1. code coverage measures how much of program’s source code is covered in test plan. with code coverage tool, you can monitor the execution of statements in your source code.
-4. What are the different types of test coverage techniques ?
-    1. Statement coverage 
-    2. Decision coverage
-    3. path coverage
-    4. function coverage
-5. What is black box, white-box, grey-box testing ?
-    1. Blackbox testing - In black-box testing, system is testing only in terms of it’s external behavior. this approach is used in acceptance testing and system testing.
-    2. White box testing - A white box testing is a method of testing a program  that takes into account it’s internal workings. It is used in integration testing and unit testing.
-    3. Grey-box testing - In this testing we test the software with partial understanding of it’s internal structure.
-6. Is automation testing in agile methodology useful ?
-    1. Automation testing in agile is very useful. It helps to achieve maximum test coverage in lesser time.
-7. Explain test scenario, test case and test script
-    1. Test scenario - is a set of test cases that covers the end-to-end functionality of software application.
-    2. Test case - is a series of actions executed to verify a particular feature.
-    3. Test Script - refers to set of instructions that will be followed in order to verify the system under test.
-8. What is a bug ?
-    1. bug is an error in software. When is bug is found it is recorded in the bug-tracking system and it is assigned a priority and then assigned to a software developer to fix it. once the developer fixes the problem it is marked ready for testing. tester verifies if the bugs has been fixed and then closes it.
-9. What is the difference between bug and error ?
-    1. bug - bug is software defect. submitted by tester
-    2. error - error occurs when the code is unable to be complied.
-10. What is test plan?
-    1. Test plan is a dynamic document monitored and maintained by the test manager. It describes the testing scope and activities and it serves as a blueprint for the entire testing process.
-    2. it containts - test strategy, test objective, test scope, reason for testing, resource planning, test deliverables.
-11. What is a test report ? what does it include ?
-    1. Test report is a document that includes total summary of testing. It includes test objectives, test activities and test result.
-12. What do you mean by Test Deliverables ?
-    1. Test Deliverables are list of documents, tools and other components that are given to stake holders of a software project at the end of Testing.
-13. What are the documents involved in testing ?
-    1. Before testing phase - Test plan, test design specifications, test cases documents
-    2. During Testing phase - Test scripts, Test data, Test traceability matrix, error logs and execution logs.
-    3. After Testing Phase - Test Report, Defect report, release notes.
-14. What are some common mistakes that lead to major issues ?
-    1. Poor Scheduling
-    2. improper resource allocation
-    3. underestimating
-    4. ignoring small issues.
-15. What is a user story ?
-    1. All softwares have target users. A user story describes the user’s motivation and what they are trying to accomplish.  it ignores the design and implementation details. 
-16. What are some software testing frameworks you are familiar ?
-    1. selenium - web browser automation tool that automates tests to run on a web site.
-    2. Protractor - end-to-end test framework for Angular.
-    3. Cypress - front end testing tool for web applications
-    4. Junit Nunit - unit testing framework for java and C#
-17. What is A/B testing ?
-    1. A/B testing is a process of testing two or more different versions of your software with users to assess which performs better. 
-18. What is sanity testing in software testing?
-    1. After software is build is received, a sanity test is conducted to ensure that changes made to the code are working correctly. The process is undocumented and unscripted. In this approach limited functionalities are tested deeply.
-19. What qualities a software tester should have ?
-    1. Any software tester’s goal is to find bugs and problems so that the customers don’t have to. So tester should have strong eye for details.
-    2. They should know the ins and outs of the software they are testing.
-    3. They should have domain knowledge of the application they are testing.
-    4. A good tester should keep the end user in mind when they are testing.
-    5. Tester should have basic programming knowledge.
-    6. Excellent communication skills both written and verbal.
-20. What is boundary value analysis in software testing  ? 
-    1. Input values near the boundary have higher probability of error, so BVA uses boundary values to create test cases.
-21. Explain the role of testing in software development 
-    1. In traditional waterfall model - requirements are gathered first and Requirement Specification Document is created. this document drives the Design and development phase. finally tester conduct testing at the end of software development life cycle.
-    2. In agile - Software development and testing is done in parallel. Developers build small functionality according to the requirements. The testers test it and get customer feedback, which drives the development.
-22. why developers shouldn’t test the software they wrote ?
-    1. Since they wrote the software they tend to be optimistic about the software and don’t have correct attitude for testing.
-    2. since developers are not trained tester they wont develop sophisticated testcases
-    3. They try to test the code to make sure that it works, rather than testing all the ways which it doesn’t work.
-23. What is software testing life cycle ?
-    1. Requirement analysis 
-    2. test planning
-    3. testcase development
-    4. Test Environment setup
-    5. Test execution
-    6. test Closure
-24. What is alpha testing ?
-    1. before you ship the software to customers, internal testing team performs alpha testing.
-25. What is beta testing ?
-    1. Once you ship the software to customers after alpha testing. Customer performs beta testing. It is the last part of acceptance testing.
-26. what is V model in software testing ?
-    1. V model also known as validation or verification model. This method consist of associating a testing phase with corresponding development phase.
-27. What is the defect life cycle ?
-    1. The various stages defect goes through during it’s lifetime.
-        1. New, assigned, Active, test, verified, Closed
-28. What is Test-Driven-Development ?
-    1. In TDD, a developer working on a feature first writes a failing test , then writes just enough code to make that test pass. Once they have a passing test, they add another failing test and then write just enough code to pass the failing test. this cycle repeats until the developer has the fully working features.
+# Software Testing Overview
+
+## What is Software Testing?
+**Software Testing** is the process of evaluating a software application to detect and resolve defects. It ensures that the software meets business and technical requirements and functions as expected.
+
+### Objectives of Software Testing:
+- Identify and fix software defects.
+- Ensure software **quality, reliability, and security**.
+- Validate that the product meets customer requirements.
+- Improve overall **performance and user experience**.
+
+### Importance of Software Testing:
+- Prevents **high-cost failures** in production.
+- Ensures **compatibility** across different environments.
+- Enhances **customer satisfaction** and business reputation.
+
+---
+
+## Common Types of Software Testing
+
+| **Type**         | **Description** |
+|-----------------|---------------|
+| **Unit Testing** | Tests individual components or functions of code. |
+| **Integration Testing** | Ensures multiple components work together correctly. |
+| **Regression Testing** | Confirms new code changes don’t break existing features. |
+| **System Testing** | End-to-end testing to validate the entire application. |
+| **Smoke Testing** | A quick validation of basic functionality before deeper testing. |
+| **Performance Testing** | Assesses response time, speed, and scalability. |
+| **User Acceptance Testing (UAT)** | Ensures the software meets customer expectations before release. |
+| **Stress Testing** | Evaluates how the system handles high loads or extreme conditions. |
+| **Sanity Testing** | Verifies bug fixes and changes after a build. |
+
+---
+
+# Software Testing Q&A
+
+1. **What is software testing?**  
+   - Software testing involves evaluating and verifying a software product’s functionality to ensure it meets requirements and is defect-free.
+
+2. **What are the different types of software testing?**  
+   - **Functional Testing**: Unit testing, integration testing, system testing, regression testing, user acceptance testing.  
+   - **Non-Functional Testing**: Performance testing, security testing, documentation testing, installation testing.
+
+3. **What are the principles of testing?**  
+   - **Absence of errors fallacy**: Bug-free software must still meet customer needs.  
+   - **Testing shows the presence of errors**: Testing reduces, but doesn’t eliminate, defects.  
+   - **Exhaustive testing is not possible**: It’s impractical to test all possible cases.  
+   - **Defect clustering**: Most defects are found in a small number of modules.  
+   - **Pesticide paradox**: Re-running the same tests won’t find new bugs; test cases need updates.  
+   - **Early testing**: Catching defects early reduces costs.  
+   - **Testing is context-dependent**: Testing strategies vary by project.
+
+4. **What is API testing?**  
+   - API testing verifies interactions between different software components by testing their requests, responses, and error handling.
+
+5. **How does a test coverage tool work?**  
+   - It measures how much of the codebase is executed during testing to ensure adequate coverage.
+
+6. **What are the different types of test coverage techniques?**  
+   - **Statement Coverage**  
+   - **Decision Coverage**  
+   - **Path Coverage**  
+   - **Function Coverage**  
+
+7. **What is black-box, white-box, and grey-box testing?**  
+   - **Black-box testing**: Tests external behavior without knowing internal code structure.  
+   - **White-box testing**: Tests internal logic, focusing on how the code works.  
+   - **Grey-box testing**: Combines both, testing with partial knowledge of the system.
+
+8. **Is automation testing useful in Agile methodology?**  
+   - Yes, automation helps achieve maximum test coverage in less time, supporting frequent releases.
+
+9. **What is the difference between a test scenario, test case, and test script?**  
+   - **Test Scenario**: Covers an end-to-end feature.  
+   - **Test Case**: Describes specific test conditions and expected results.  
+   - **Test Script**: A set of instructions executed for automated testing.
+
+10. **What is a bug?**  
+    - A bug is a software defect recorded in a bug-tracking system and assigned a priority before being fixed and retested.
+
+11. **What is the difference between a bug and an error?**  
+    - **Bug**: Found by testers and occurs when software behavior deviates from expected results.  
+    - **Error**: Occurs when the code fails to compile or execute correctly.
+
+12. **What is a test plan?**  
+    - A dynamic document describing the testing scope, objectives, strategy, and resource planning.
+
+13. **What is a test report?**  
+    - A summary document detailing test execution, objectives, and results.
+
+14. **What do you mean by test deliverables?**  
+    - A list of documents, tools, and components shared with stakeholders at different phases of testing.
+
+15. **What is A/B testing?**  
+    - A method of testing two different versions of software with users to determine which performs better.
+
+16. **What is boundary value analysis (BVA)?**  
+    - A technique where test cases are created using boundary values, as they have a higher probability of defects.
+
+17. **Why shouldn’t developers test their own software?**  
+    - Developers may be biased, lack detailed test cases, and focus on making the code work rather than breaking it.
+
+18. **What is the Software Testing Life Cycle (STLC)?**  
+    - **Requirement Analysis**  
+    - **Test Planning**  
+    - **Test Case Development**  
+    - **Test Environment Setup**  
+    - **Test Execution**  
+    - **Test Closure**  
+
+19. **What is alpha testing?**  
+    - Internal testing conducted before software is released to customers.
+
+20. **What is beta testing?**  
+    - Testing performed by customers after release, providing final feedback.
+
+21. **What is the V-Model in software testing?**  
+    - A development model where each testing phase is associated with a corresponding development phase.
+
+22. **What is the defect life cycle?**  
+    - The stages a defect goes through: **New → Assigned → Active → Tested → Verified → Closed**.
+
+23. **What is Test-Driven Development (TDD)?**  
+    - A methodology where developers first write failing tests, then implement code to make the tests pass.
+
+---
+
+### Summary
+- **Software testing ensures quality, reliability, and security.**
+- **Different testing techniques focus on functionality, performance, and usability.**
+- **Automation is essential for Agile methodologies.**
+- **Testing requires continuous improvements with evolving test cases.**
+
